# ClimaSentinel

./: .env.example  .gitignore  ADK_MIGRATION_GUIDE.md  AGENT_FIX_SUMMARY.md  ALERTS_IMPLEMENTATION_SUMMARY.md  ALERTS_SETUP_GUIDE.md  ALERTS_WORKFLOW_DIAGRAM.md  API_EXAMPLES.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CYCLONE_ALERT_FIX.md  DATABASE_FIX_GUIDE.md  DEBUG_SEND_ALERTS.md  Dockerfile  EMAIL_SETUP_TESTING_GUIDE.md  ENHANCED_DISASTER_RESPONSE_GUIDE.md  FILES.md  FINAL_SOLUTION_SUMMARY.md  FIX_422_ALERT_ERROR.md  FIX_422_ERROR.md  HARDCODED_DATA_AUDIT.md  HOW_TO_TEST_FIXES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALL.md  QUICKSTART.md  QUICK_EMAIL_TEST.md  QUICK_FIX_SUMMARY.md  QUICK_START_TESTING.md  README.md  RESPONSE_PLAN_BUTTONS_FIXED.md  SEND_ALERTS_BUTTON_FIX.md  SETUP_GUIDE.md  SOCIAL_MEDIA_SETUP.md  START_COMMANDS.md  SUMMARY.md  TEST_SEND_ALERTS_NOW.md  WEATHER_ANALYSIS_FIXES.md  (+11 more)
frontend/: QUICKSTART.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/: __init__.py  main.py  main_old.py
src/agents/: __init__.py  multi_agent_system.py  multi_agent_system.py.backup
src/api/: __init__.py  dependencies.py  enhanced_disaster_response.py  fastapi_app.py
src/database/: __init__.py  connection.py
src/evaluation/: __init__.py  agent_evaluation.py
src/memory/: __init__.py  session_memory.py  session_memory_old.py
src/models/: __init__.py  alert.py  chat_history.py  notification_log.py  user.py  user_subscription.py
src/observability/: __init__.py  monitoring.py  (+1 more)
(+57 files in other folders)
